fixes dark mode

--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -1,12 +1,14 @@
 header#banner h2 a {
   color: $accent-color;
 }
-body  {
+body {
   font-family: $main-font, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $body-text-color;
 }
+
+
 main#content p {
   color: $body-text-color;
 }
@@ -36,6 +38,11 @@ blockquote {
   font-style: italic;
 }
 
+@media (prefers-color-scheme: dark) {
+  blockquote {
+    background-color: #505050;
+  }
+}
 #content li {
   margin-bottom: 1rem;
 }
